# python-uv

./: .coveragerc  .editorconfig  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  BRANCH_MAINTENANCE.md  LICENSE  MINIMAL_BRANCH_GUIDE.md  README.md  USING_AS_TEMPLATE.md  create-minimal-branch.sh  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
.devcontainer/: Dockerfile  TOOLS_REFERENCE.md  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: test.yml
azure-pipelines/: README.md  devcontainer-validation.yml  docker-validation.yml  docs-deploy.yml  format-check.yml  lint.yml  test.yml
docs/: index.md
docs/about/: license.md
docs/configurations/: environment-variables.md  index.md
docs/deployment/: azure.md  docker.md  index.md  monitoring.md  secrets.md
docs/getting-started/: index.md
docs/guides/: index.md  test.md
docs/guides/tools/: config.md  index.md  logger.md
docs/usecases/: index.md  opencv.md
tests/: test__minimal.py
tests/tools/: test__config.py  test__logger.py  test__tracer.py
tools/: __init__.py
tools/config/: settings.py
tools/logger/: __init__.py  azuremonitor.py  logger.py  type.py
tools/tracer/: timer.py
