[project]
name = "python-uv-template"
version = "0.1.0"
description = "Lightweight Python development template with uv and Ruff for quick POCs and prototypes."
keywords = ["template", "uv", "ruff", "poc", "prototype"]

authors = [{ name = "CRDigitalAndMining", email = "contact@crdigital.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "azure-monitor-opentelemetry>=1.6.4",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
]

[project.optional-dependencies]
# Web framework with production server
fastapi = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0"]
# Database with ORM and migrations
database = ["sqlalchemy>=2.0.0", "alembic>=1.13.0"]
# All optional dependencies
all = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
